kubernetes/pods/position-sim-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
  labels:
    app: position-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: position-simulator
  template:
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/k8s-fleetman-position-simulator:release2
