kubernetes/pods/queue-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
  labels:
    app: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:release2
        ports:
          - containerPort: 8161

---

apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  selector:
    app: queue
  type: NodePort
  ports:
  - name: http
    port: 8161
    targetPort: 8161
    nodePort: 30010

  - name: endpoint
    port: 61616
