kubernetes/pods/queue-pod.yaml

apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  selector:
    app: queue
    release: "1"
  type: NodePort
  ports:
  - name: fleetman-queue
    port: 8161
    targetPort: 8161
    nodePort: 30010
