kubernetes/pods/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
  - name: fleetman-webapp
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  selector:
    app: position-tracker
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  selector:
    app: queue
  type: ClusterIP
  ports:
  - name: http
    port: 8161
    targetPort: 8161
  - name: endpoint
    port: 61616

---

apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
